css/style.css
/* ... */
.maps img {
  width: 100%;
  height: auto;
}

.address {
  align-items: center;
  display: flex;
  margin-top: 20px;
}

.address__icon i {
  color: #fefefe;
  font-size: 36px;
}

.address__icon {
  background: #c43b68 none repeat scroll 0 0;
  height: 120px;
  line-height: 144px;
  text-align: center;
  width: 110px;
}

.address__details {
  background: #f5f5f5 none repeat scroll 0 0;
  flex-basis: calc(100% - 110px);
  padding-left: 5%;
  padding-right: 5%;
}

.address__details h2 {
  color: #212121;
  font-size: 18px;
  font-weight: 600;
  text-transform: uppercase;
}

.address__details p {
  color: #666666;
  font-size: 16px;
  margin-top: 10px;
}

/* MAPS - END*/

.contact_card_custom {
  background-color: #c43b68;
  border-radius: 18px;
}

/* CONTACT - END */

/* FILTERS */
/* .row #filters.push-m1 {
  left: 5.3333333333%
} */

#filters {
  /* font-family: Roboto, sans-serif; */
  overflow: hidden;
  z-index: 0;
  text-transform: uppercase;
}

#filters .title {
  color: #202020;
  font-family: "Poppins", sans-serif;
  font-size: 1.3em !important;
  font-weight: 600;
}

.filter_content {
  margin: 5%;
}

.filter_head {
  font-family: "Roboto", sans-serif;
  padding: 1rem;
  margin: 0;
  font-size: 0.8em !important;
  font-weight: 700;
  color: #212121;
}

.filter_head:hover {
  background-color: rgb(245, 245, 245);
}

.filter_options {
  display: none;
  padding: 5%;
}

#subcategory_body {
  display: block;
}

#subcategory_body.filter_options {
  padding: 0%;
  text-transform: capitalize;
}

.filter_options li {
  line-height: 1.7em;
  font-size: large;
  color: #242424;
}

#color_body {
  display: block;
}

.filter_options p {
  line-height: 1em;
}

.filter_options label {
  color: #242424;
}



[type="checkbox"]+span:not(.lever) {
  font-size: 0.9rem;
}

[type="radio"]:not(:checked)+span,
[type="radio"]:checked+span {
  font-size: 0.9rem;
  font-weight: 400;
  color: rgb(68, 68, 68);
}

[type="checkbox"].filled-in:checked+span:not(.lever):after {
  top: 0;
  width: 20px;
  height: 20px;
  border: 2px solid #000;
  background-color: rgb(59, 0, 94);
  z-index: 0;
}

.color_buttons a {
  margin: 2%;
}

/* FILTERS - END */

/* SUPER CATEGORIES */

.snip1581 {
  width: 100%;
  position: relative;
  display: inline-block;
  overflow: hidden;
  background-color: #000000;
  color: #ffffff;
  text-align: left;
  font-size: 16px;
  box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
}

.snip1581 * {
  -webkit-transition: all 0.35s;
  transition: all 0.35s;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

.snip1581 img {
  width: auto;
  max-width: 100%;
  object-fit: cover;
  vertical-align: top;
}

@media screen and (min-width: 601px) {
  .snip1581 img {
    height: 20vw;
  }
}

.snip1581 figcaption {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  padding: 20px;
  background-image: -webkit-linear-gradient(bottom,
      rgba(0, 0, 0, 0.973) 0%,
      transparent 100%);
  background-image: linear-gradient(to top,
      rgba(0, 0, 0, 0.973) 0%,
      transparent 100%);
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
}

.snip1581 h3 {
  font-size: 1.5em;
  font-weight: 400;
  line-height: 1.15;
  letter-spacing: 1px;
  margin: 3px 0;
}

.snip1581 .title1 {
  font-weight: 700;
}

.snip1581 .title2 {
  color: #e9e9e9;
  font-weight: 300;
}

.snip1581 .title3 {
  font-size: 25px;
}

.snip1581 a {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}

.snip1581:hover img,
.snip1581.hover img {
  -webkit-transform: scale(1.1) rotate(1deg);
  transform: scale(1.1) rotate(1deg);
}

/* SUPER CATEGORIES - END */
/* CATEGORIES */

#cat a {
  font-size: 3em;
  text-align: center;
  color: #e6e6e6;
}

/* CATEGORIES - END */

/* ADD TO CART */
span.htc__qua {
  background: #c43b68;
  border-radius: 100%;
  color: #fff;
  font-size: 9px;
  height: 17px;
  line-height: 19px;
  position: absolute;
  right: 17;
  text-align: center;
  top: 20%;
  width: 17px;
}

span.htc__qua1 {
  border-radius: 100%;
  text-align: center;
  color: rgb(0, 0, 0);
  font-size: 9px;
  height: 17px;
  line-height: 19px;
  position: absolute;
  right: 17;
  text-align: center;
  bottom: 10px;
  width: 17px;
}

@media screen and (max-width: 992px) {
  span.htc__qua {
    width: 15px;
    height: 15px;
    line-height: 15px;
    right: 0px;
    top: 15%;

  }

  span.htc__qua1 {
    width: 15px;
    height: 15px;
    line-height: 15px;
    right: 0px;
    bottom: 10px;


  }
}

/* ADD TO CART - END */

/* CHECKOUT */

#address_details.title h1,
#order_details.title h1,
#payment_mode.title h1 {
  color: #313131;
  font-family: "Poppins", sans-serif;
  font-size: 2em !important;
  font-weight: 700;
}


#address_form input,
#address_form textarea {
  padding: 15px;
  border: 1px solid #616161;
  border-radius: 3px;
  margin-bottom: 10px;
  width: 100%;
  box-sizing: border-box;
  font-family: montserrat;
  color: #2C3E50;
  font-size: 13px;
}

#address_form_submit input {
  padding: 15px;
  border: 1px solid #ff00f2;
  background-color: #ff3df5;
  border-radius: 3px;
  margin-bottom: 10px;
  width: 100%;
  box-sizing: border-box;
  font-family: montserrat;
  color: #ffffff;
  font-size: 1.4em;
}

#address_form_submit input:hover {
  cursor: pointer;
  border: 1px solid #444;
  background-color: #ffffff;
  color: #444;
}



::-webkit-input-placeholder {
  color: #2C3E50;
  opacity: 1 !important;
  /* for older chrome versions. may no longer apply. */
}

:-moz-placeholder {
  /* Firefox 18- */
  color: #2C3E50;
  opacity: 1 !important;
}

::-moz-placeholder {
  /* Firefox 19+ */
  color: #464646a6;
  opacity: 1 !important;
}

:-ms-input-placeholder {
  color: #FF0000;
}

/* CHECKOUT - END */


/* IMAGE ZOOM ON HOVER  */
figure.zoom {
  background-position: 50% 50%;
  position: relative;
  width: 80%;
  height: auto;
  margin: 10%;
  overflow: hidden;
  cursor: zoom-in;
}

figure.zoom img:hover {
  opacity: 0;
}
/* ... */

